# akvo-form-print

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.release  MANIFEST.in  README.md  docker-compose.yml  env_example  publish.sh  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py
examples/: basic_example.py  flow_example.py  render_example.py  sample2_form.json  sample4_form.json  sample5_form.json  sample_form.json  webform_example.py
examples/data/: .gitignore  akvo_webform.json  anu_form.json  default_form.json  flow_form.json
scripts/: README.md  release.sh
src/AkvoFormPrint/: __init__.py  enums.py  models.py
src/AkvoFormPrint/parsers/: akvo_arf_parser.py  akvo_flow_parser.py  akvo_parser.py  default_parser.py
src/AkvoFormPrint/stylers/: docx_renderer.py  weasyprint_styler.py
src/AkvoFormPrint/styles/: default.css
src/AkvoFormPrint/templates/: form_template.html  question_block.html
src/AkvoFormPrint/templates/macros/: question_macros.html
tests/: test_0010_models.py  test_0020_akvo_flow_parser.py  test_0025_arf_parser.py  test_0030_weasyprint_styler.py  test_0032_docx_renderer.py  test_akvo_flow_parser.py  test_models.py
