[metadata]
version = attr: AkvoFormPrint.__version__
license_files = LICENSE

[flake8]
# Flake plugins:
max-line-length = 88
max-complexity = 20
inline-quotes = single
accept-encodings = utf-8
isort-show-traceback = True
# Excluding some directories:
exclude = .git,__pycache__,build,dist,*.egg-info

[tool.black]
line-length = 88